[package]
name = "make_a_mental_health_plan"
version = "0.1.0"
authors = ["mattjmcnaughton <mattjmcnaughton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
rocket_cors = "0.5.0"
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
